<resources>

    <string name="app_name">車检终端</string>

    <string name="aspectcheck">外观查验</string>
	<string name="zbzlcarlist">整备质量待检车辆</string>
	<string name="zbzlcheck">整备质量检测</string>
	<string name="qdzczcarlist">独立驱动轴称重待检车辆</string>
    <string name="waitinspectcar">外观待检车辆</string>
    <string name="pullcar">引车上线</string>
    <string name="dynamic_check_car">底盘动态待检车辆</string>
    <string name="chassis_check_car">底盘部件待检车辆</string>
    <string name="workreset">复位工位</string>
    <string name="roadtest_pullcar">路试引车</string>
    <string name="reset">复位</string>
    <string name="recheck_car_list">复检车辆列表</string>
    <string name="recheck_car_list">查询检测未完成车辆列表</string>
    

    <string name="checkpass">合格</string>
    <string name="checkfail">不合格</string>
    <string name="notcheck">不检</string>
    <string name="sd_disable">SD卡不可用，请检查</string>
    <string name="not_photo">保存照片出现错误,请重试</string>
    <string name="check_result">检验结果</string>
    <string name="check_fail_items">检验不合格项</string>
    <string name="check_remark">写下哪些检验项目不合格吧！</string>
    <string name="fail_reason">填写不合格原因</string>
    <string name="auto_judge">自动判定,请点击</string>
    <string name="login">登陆</string>
    <string name="password">密码</string>
    <string name="usrname">用户名</string>
    <string name="server">服务器设置</string>
    <string name="ip">服务器IP</string>
    <string name="port">端口</string>
    <string name="save">保存</string>
    <string name="search_vehicle_hphm">查找车辆</string>
    <string name="please_login">请登录</string>
    <string name="please_input_hphm">请输入车辆号牌</string>
    <string name="not_connect_server">未连接服务器</string>
    <string name="network_error">请检查网络</string>
    <string name="check_line_num">%1$s号检测线</string>
    <string name="select_photo_type">选择拍照项目</string>
    
    <string name="outer_nav1_menu1">外观查验</string>
    <string name="outer_nav1_menu2">底盘动态检查</string>
    <string name="outer_nav1_menu3">底盘部件检查</string>
    <string name="outer_nav1_menu4">重新拍照或补拍</string>
    <string name="outer_nav1_menu5">复检车辆</string>
    <string name="outer_nav1_menu6">查询检验过程</string>
    <string name="outer_nav2_menu1">引车上线</string>
    <string name="outer_nav2_menu2">工位复位</string>
    <string name="outer_nav2_menu3">路试引车</string>
    <string name="outer_nav2_menu4">整备质量检测</string>
    <string name="outer_nav2_menu5">独立驱动轴称重</string>
    <string name="outer_nav2_menu6">退线及重新上线</string>
    
    <string name="outer_nav1_menu1_des">车辆唯一性,车辆特征参数,车辆外观,安全装置,拍摄外观照片</string>
    <string name="outer_nav1_menu2_des">包含底盘动态检查</string>
    <string name="outer_nav1_menu3_des">包含底盘部件检查</string>
    <string name="outer_nav1_menu4_des">外观照片重新拍照或补拍照片</string>
    <string name="outer_nav1_menu5_des">复检车辆</string>
    <string name="outer_nav1_menu6_des">查询车辆的检验过程及状态</string>
    <string name="outer_nav2_menu1_des">引车员引车上线</string>
    <string name="outer_nav2_menu2_des">终端上复位工位</string>
    <string name="outer_nav2_menu3_des">路试引车上线</string>
    <string name="outer_nav2_menu4_des">若有整备质量，使用整备质量值</string>
    <string name="outer_nav2_menu5_des">若无整备质量，使用独立驱动轴称重</string>
    <string name="outer_nav2_menu6_des">退线及重新上线</string>
    
    <string name="veh_jcx">号检测线</string>
    <string name="veh_sendback">退办</string>
    <string name="is_confirm_roadtest">是否确定%1$s路试引车</string>
    <string name="is_confirm_pullcar">是否确定%1$s引车上线</string>
    <string name="is_confirm_reset">是否确定%1$s复位</string>
    <string name="reset_success">复位成功</string>
    <string name="positive">确定</string>
	<string name="negative">取消</string>
	
	<string name="rephoto_hint">提示:输入号牌号码后4位字母或数字(不能输入汉字)</string>
	<string name="rephoto_hint1">没有找到该号牌车辆</string>
	<string name="rephoto_hint2">查找到的车辆(数量多时可以下拉)</string>
	
	
	<string name="roadtest_brake_start">制动开始</string>
	<string name="roadtest_brake_end">制动结束</string>
	<string name="roadtest_autopark_start">驻车开始</string>
	<string name="roadtest_autopark_end">驻车结束</string>
	<string name="roadtest_velocity_start">速度开始</string>
	<string name="roadtest_velocity_end">速度结束</string>
	<string name="starttime">开始时间：</string>
	<string name="endtime">结束时间：</string>
	<string name="is_must_photo">淡红色照片种类表示必须要拍摄</string>
	<string name="measure">人工测量外廓</string>
	
	
	<string name="line_cylinder">滚筒线</string>
	<string name="line_plate">平板线</string>
	<string name="line_is_jz">加载线</string>
	<string name="line_not_jz">非加载线</string>
	
	<string name="system_setting_0">启用引车选线号</string>
	<string name="system_setting_1">检测站名称</string>
</resources>
