<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:descendantFocusability="blocksDescendants"
    android:background="@drawable/listitem_bg"
    android:padding="20dp">
    
    
    <TextView android:id="@+id/tv_roadtest_type" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="#898989"
        android:textSize="12sp"
        android:text="路试制动"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:background="#DFEFFF"
        />
    

	<LinearLayout android:id="@+id/ll_roadtest_start"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp"
	    android:layout_below="@id/tv_roadtest_type"
	    android:gravity="center_vertical"
	    android:orientation="horizontal"
	    >
	    <Button
        android:id="@+id/btn_roadtest_start"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/roadtest_brake_start"
        android:textColor="#ffffff"
        android:background="@drawable/login_btn"
        android:layout_gravity="center_vertical"
        android:textSize="16sp"
        />
     <TextView android:id="@+id/tv_roadtest_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textColor="#898989"
        android:layout_gravity="center_vertical"
        android:textSize="14sp"
        android:text="@string/starttime"
        />
	</LinearLayout>
    
	
	<LinearLayout android:id="@+id/ll_roadtest_end"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/ll_roadtest_start"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal"
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp"
	    >
	    <Button
        android:id="@+id/btn_roadtest_end"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/roadtest_brake_end"
        android:textColor="#ffffff"
        android:background="@drawable/login_btn"
        android:textSize="16sp"
        />
     <TextView android:id="@+id/tv_roadtest_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textColor="#898989"
        android:textSize="14sp"
        android:text="@string/endtime"
        />
	</LinearLayout>
    
    
</RelativeLayout>
