<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
<LinearLayout android:id="@+id/ll_checkdeteil"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@color/white">
        
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:orientation="horizontal" >

             <ImageView
                 android:id="@+id/iv_topic"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_margin="10dp"
                 android:src="@drawable/ic_topic" />

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:text="@string/check_fail_items"
                 android:textColor="@color/dark_gray"
                 android:textSize="16sp" />
         </LinearLayout>
         <View android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/border"/>
         <EditText 
             android:id="@+id/et_remark"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="5dp"
             android:background="@null"
             android:textSize="16sp"
             android:gravity="top"
             android:hint="@string/fail_reason"
             android:textColorHint="@color/dark_gray"
             />
         
    </LinearLayout>
    
 	<Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp" 
        android:onClick="saveIP"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:background="@drawable/login_btn"
        android:textSize="16sp"
        />
    
    
</LinearLayout>