<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include android:id="@+id/toptitle" layout="@layout/top"/> 
	
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="22dp"
        android:clickable="true"
        android:background="@drawable/login_bg_input_box">
        
        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="3dp"
             android:layout_marginRight="3dp"
             android:background="@drawable/ico_mobile"
             android:scaleType="centerInside" />
        
        <EditText
            android:id="@+id/et_hphm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_input_hphm"
            android:textColor="#ff353535"
            android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
            android:textSize="16sp" />
    </LinearLayout>

    
    
 	<Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp" 
        android:onClick="saveIP"
        android:text="@string/search_vehicle_hphm"
        android:textColor="#ffffff"
        android:background="@drawable/login_btn"
        android:textSize="16sp"
        />
 	
 	<TextView android:id="@+id/tv_hint"
 	    android:layout_marginLeft="16dp"
 	    android:layout_marginTop="15dp"
 	    android:layout_height="wrap_content"
 	    android:layout_width="wrap_content"
 	    android:text="@string/rephoto_hint1"
 	    android:textSize="14sp"
 	    android:textColor="#898989"
 	    />
 	
    <ListView android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical"
        />
    
</LinearLayout>