<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="22dp"
        android:clickable="true"
        android:background="@drawable/login_bg_input_box">
        
        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="3dp"
             android:layout_marginRight="3dp"
             android:background="@drawable/ico_mobile"
             android:scaleType="centerInside" />
        
        <EditText
            android:id="@+id/et_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/ip"
            android:textColor="#ff353535"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/login_bg_input_box">
        
        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="3dp"
             android:layout_marginRight="3dp"
             android:background="@drawable/ico_password"
             android:scaleType="centerInside" />
        
        <EditText
            android:id="@+id/et_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/port"
            android:inputType="number"
            android:textColor="#ff353535"
            android:textSize="16sp" />
    </LinearLayout>
    
 	<Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp" 
        android:onClick="saveIP"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:background="@drawable/login_btn"
        android:textSize="16sp"
        />
    
    
</LinearLayout>